# rag-tutorial

./: HyDE_Hypothetical_Document_Embedding.ipynb  README.md  devfile.yaml  helper_functions.py  pyproject.toml  requirements.txt  semantic_chunking.ipynb  simple_rag.ipynb
evaluation/: evalute_rag.py
src/: 01. basic.ipynb  02. prompt.ipynb  03. splitter.ipynb  04. embeddings.ipynb  05. retrievers.ipynb  06. chain.ipynb  embedding.py  main.py  model.py  output_parser_email_summary.py  prompt.py  pypdf_loader.py  reranking.ipynb  retreiver_multivector.py  retriever_multi_summary.py  retriever_parent_document.py  retriever_pdf.py  retriever_txt.py  semantic_chunker.py  test.ipynb  text_generation_inference.py
